--- a/index.html
+++ b/index.html
@@ -588,32 +588,32 @@
                 <h1 class="text-center">Meet Our Billionaire Professors</h1>
                 <h4 class="text-center underline"></h4>
             </div>
-            <div class="col-lg-2 col-6 pt-4 m-auto">
+            <div class="col-lg-2 col-6 pt-4">
                 <img src="images/prof/1.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Anand Kumar</h6>
                 <p class="text-center">Super 30</p>
             </div>
-            <div class="col-lg-2 col-6 pt-4 m-auto">
+            <div class="col-lg-2 col-6 pt-4">
                 <img src="images/prof/2.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Acharya Balkrishna</h6>
                 <p class="text-center">Patanjali</p>
             </div>
-            <div class="col-lg-2 col-6 pt-4 m-auto">
+            <div class="col-lg-2 col-6 pt-4">
                 <img src="images/prof/3.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Rahul Narvekar</h6>
-                <p class="text-center">India Angle Fund and The India Network</p>
+                <p class="text-center">India Angle Fund & The India Network</p>
             </div>
-            <div class="col-lg-2 col-6 pt-4 m-auto">
+            <div class="col-lg-2 col-6 pt-4">
                 <img src="images/prof/4.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Yashish Dahiya</h6>
                 <p class="text-center">Policy bazar</p>
             </div>
-            <div class="col-lg-2 col-6 pt-4 m-auto">
+            <div class="col-lg-2 col-6 pt-4">
                 <img src="images/prof/5.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Anuradha Agarwal</h6>
                 <p class="text-center">Multibhashi</p>
             </div>
-            <div class="col-lg-2 col-6 pt-4 m-auto">
+            <div class="col-lg-2 col-6 pt-4">
                 <img src="images/prof/6.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Samir Sathe</h6>
                 <p class="text-center">Wadhwani Foundation</p>
