owl carousel added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOW TO START A STARTUP</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
+        integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
+        integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
@@ -263,7 +269,8 @@
                                     </label>
                                 </div>
                                 <div class="mbox col-11">
-                                    <label class="card-text">I want to build my successful startup but i have no idea where to start.</label>
+                                    <label class="card-text">I want to build my successful startup but i have no idea
+                                        where to start.</label>
                                 </div>
                             </div>
                         </div>
@@ -317,7 +324,7 @@
                                 <div class="mbox col-11">
                                     <label class="card-text">I want to get my first 1000 customers</label>
                                 </div>
-                            </div>     
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -332,7 +339,8 @@
                                     </label>
                                 </div>
                                 <div class="mbox col-11">
-                                    <label class="card-text">I want to avoid mistakes that leades to startup failure</label>
+                                    <label class="card-text">I want to avoid mistakes that leades to startup
+                                        failure</label>
                                 </div>
                             </div>
                         </div>
@@ -349,7 +357,8 @@
                                     </label>
                                 </div>
                                 <div class="mbox col-11">
-                                    <label class="card-text">I want to know how to scale my startup to next level</label>
+                                    <label class="card-text">I want to know how to scale my startup to next
+                                        level</label>
                                 </div>
                             </div>
                         </div>
@@ -588,35 +597,69 @@
                 <h1 class="text-center">Meet Our Billionaire Professors</h1>
                 <h4 class="text-center underline"></h4>
             </div>
-            <div class="col-lg-2 col-6 pt-4">
-                <img src="images/prof/1.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Anand Kumar</h6>
-                <p class="text-center">Super 30</p>
+            <div class="row pgallery">
+                <div class="col-lg-2 col-6 pt-4">
+                    <img src="images/prof/1.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Anand Kumar</h6>
+                    <p class="text-center">Super 30</p>
+                </div>
+                <div class="col-lg-2 col-6 pt-4">
+                    <img src="images/prof/2.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Acharya Balkrishna</h6>
+                    <p class="text-center">Patanjali</p>
+                </div>
+                <div class="col-lg-2 col-6 pt-4">
+                    <img src="images/prof/3.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Rahul Narvekar</h6>
+                    <p class="text-center">India Angle Fund & The India Network</p>
+                </div>
+                <div class="col-lg-2 col-6 pt-4">
+                    <img src="images/prof/4.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Yashish Dahiya</h6>
+                    <p class="text-center">Policy bazar</p>
+                </div>
+                <div class="col-lg-2 col-6 pt-4">
+                    <img src="images/prof/5.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Anuradha Agarwal</h6>
+                    <p class="text-center">Multibhashi</p>
+                </div>
+                <div class="col-lg-2 col-6 pt-4">
+                    <img src="images/prof/6.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Samir Sathe</h6>
+                    <p class="text-center">Wadhwani Foundation</p>
+                </div>
             </div>
-            <div class="col-lg-2 col-6 pt-4">
-                <img src="images/prof/2.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Acharya Balkrishna</h6>
-                <p class="text-center">Patanjali</p>
-            </div>
-            <div class="col-lg-2 col-6 pt-4">
-                <img src="images/prof/3.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Rahul Narvekar</h6>
-                <p class="text-center">India Angle Fund & The India Network</p>
-            </div>
-            <div class="col-lg-2 col-6 pt-4">
-                <img src="images/prof/4.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Yashish Dahiya</h6>
-                <p class="text-center">Policy bazar</p>
-            </div>
-            <div class="col-lg-2 col-6 pt-4">
-                <img src="images/prof/5.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Anuradha Agarwal</h6>
-                <p class="text-center">Multibhashi</p>
-            </div>
-            <div class="col-lg-2 col-6 pt-4">
-                <img src="images/prof/6.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Samir Sathe</h6>
-                <p class="text-center">Wadhwani Foundation</p>
+            <div class="mgallery owl-carousel owl-theme pt-4">
+                <div class="item p-2">
+                    <img src="images/prof/1.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Anand Kumar</h6>
+                    <p class="text-center">Super 30</p>
+                </div>
+                <div class="item p-2">
+                    <img src="images/prof/2.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Acharya Balkrishna</h6>
+                    <p class="text-center">Patanjali</p>
+                </div>
+                <div class="item p-2">
+                    <img src="images/prof/3.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Rahul Narvekar</h6>
+                    <p class="text-center">India Angle Fund & The India Network</p>
+                </div>
+                <div class="item p-2">
+                    <img src="images/prof/4.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Yashish Dahiya</h6>
+                    <p class="text-center">Policy bazar</p>
+                </div>
+                <div class="item p-2">
+                    <img src="images/prof/5.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Anuradha Agarwal</h6>
+                    <p class="text-center">Multibhashi</p>
+                </div>
+                <div class="item p-2">
+                    <img src="images/prof/6.jpg" class="img-fluid">
+                    <h6 class="text-center m-0">Samir Sathe</h6>
+                    <p class="text-center">Wadhwani Foundation</p>
+                </div>
             </div>
         </div>
     </section>
@@ -649,6 +692,7 @@
         </div>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
     <script>
         var curday;
         var secTime;
@@ -698,6 +742,22 @@
             document.getElementById("minutes").innerHTML = ((mins < 10) ? "0" : "") + mins;
             document.getElementById("seconds").innerHTML = ((secs < 10) ? "0" : "") + secs;
         }
+    </script>
+    <script>
+        $('.owl-carousel').owlCarousel({
+            autoplay: 3000,
+            responsive: {
+                0: {
+                    items: 2
+                },
+                600: {
+                    items: 2
+                },
+                1000: {
+                    items: 2
+                }
+            }
+        })
     </script>
     <script>
         $(document).ready(function () {
