--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
         integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
@@ -725,14 +722,14 @@
         })
     </script>
     <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbz52Sc7GW4j37sqcxmCNhe11dtghwgfASTx_IrF9KE7-lMP2Dh0P4t2JkGVj5CAqq6tyg/exec'
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwyHFKMTdkH9w5HYwz19OsIcY8jhYtNYoG8SnPPFLe_rfUcHnvZdkIE1fL_v3c-tC5Mqw/exec'
         const form = document.forms['google-sheet']
-
+      
         form.addEventListener('submit', e => {
-            e.preventDefault()
-            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                .then(response => window.location = "thankyou.html")
-                .catch(error => console.error('Error!', error.message))
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => window.location = "thankyou.html")
+            .catch(error => console.error('Error!', error.message))
         })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
